updates controller and views for users' messages

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/errors", :object => @message %>
 
-<%= form_for @message do |f| %>
+<%= form_for [@user, @message] do |f| %>
   <%= f.label :body %>
   <%= f.text_field :body %>
   <%= f.submit %>
