--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Messages</h1>
+<h1>Messages for <%= current_user.email %></h1>
 
 <ul>
   <% @messages.each do |message| %>
     <li><%= "#{message.body} - created on #{message.created_at}" %>
-      <p><%= link_to "Delete", message_path(message),
+      <p><%= link_to "Delete", user_message_path(current_user.id, message),
                          :data => {:confirm => "You sure?",
                                    :method => "delete"} %></p>
     </li>
@@ -12,4 +12,4 @@
 
 <hr>
 
-<%= link_to "New Message", new_message_path %>
+<%= link_to "New Message", new_user_message_path %>
