--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,8 @@
 <%= render "layouts/errors", :object => @message %>
 
 <%= form_for [@user, @message] do |f| %>
+  <% puts @message %>
+    <% puts @user %>
   <%= f.label :body %>
   <%= f.text_field :body %>
   <%= f.submit %>
