--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,10 +9,12 @@
   <div class="tab-pane active" id="all_messages">
     <div>
       <% @messages.each do |message| %>
-        <i class="fa fa-window-close-o fa-2x fa-pull-right" aria-hidden="true"></i>
+        <%= link_to message, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <i class="fa fa-window-close-o fa-2x fa-pull-right" aria-hidden="true"></i>
+        <% end %>
         <h4><%= message.body %></h4>
         <p><%= "sent #{time_ago_in_words(message.created_at)} ago" %></p>
-        <p><%= link_to "Delete", message, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+        <p><%= link_to "Delete", message, method: :delete, data: { confirm: 'Are you sure you want to delete this message?' } %></p>
         <i class="fa fa-heart-o fa-2x fa-pull-right" aria-hidden="true"></i>
         <br>
         <hr>
