--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,14 +9,22 @@
   <div class="tab-pane active" id="all_messages">
     <div>
       <% @messages.each do |message| %>
-        <%= link_to message, method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <%= link_to message, method: :delete, data: { confirm: 'Are you sure you want to delete this message?' } do %>
           <i class="fa fa-window-close-o fa-2x fa-pull-right" aria-hidden="true"></i>
         <% end %>
         <h4><%= message.body %></h4>
         <p><%= "sent #{time_ago_in_words(message.created_at)} ago" %></p>
         <div class="favoriteToggler">
-          <i class="fa fa-heart-o fa-2x fa-pull-right fave" aria-hidden="true"></i>
-          <i class="fa fa-heart fa-2x fa-pull-right fave" aria-hidden="true" style="display:none"></i>
+          <%= message.favorite %>
+          <% if message.favorite != true %>
+            <%= link_to make_favorite_path(message), method: :put do %>
+              <i class="fa fa-heart-o fa-2x fa-pull-right" aria-hidden="true"></i>
+            <% end %>
+          <% else %>
+            <%= link_to remove_favorite_path(message), method: :put do %>
+              <i class="fa fa-heart fa-2x fa-pull-right" aria-hidden="true"></i>
+            <% end %>
+          <% end %>
         </div>
         <br>
         <hr>
