fix sort order on messages, adds minor css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,11 @@
 @import 'font-awesome-sprockets';
 @import "font-awesome";
 // @import url('https://fonts.googleapis.com/css?family=Raleway:200');
+
+.inherit-color {
+  color: inherit;
+}
+
+.fav-color {
+  color: #FFE3EB;
+}
