--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,5 @@
+<%= image_tag current_user.avatar.url(:thumb) %>
+
 <h1 class="text-align-center"> <%= (current_user.name ||= current_user.username).capitalize %>'s Messages</h1>
 
 <ul class="nav nav-tabs" id="dashboard_products">
