--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Send a message to <%= @user.username %>:</h1>
+<h1>Send a message to <%= @user.name ||= @user.username %>:</h1>
+
+<%= image_tag @user.avatar.url(:medium) %>
 
 <%= render "form" %>
