--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Send a message to <%= @user.name ||= @user.username %>:</h1>
 
-<%= image_tag @user.avatar.url(:medium) %>
+<%= image_tag @user.avatar.url(:thumb), class: "rounded-centered-image" %>
 
 <%= render "form" %>
